[package]
name = "notectl"
version = "0.1.3"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.22", features = ["derive", "env"] }
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.22"
meilisearch-sdk = "0.28.0"
nanoid = "0.4.0"
openssl = "0.10.70"
rand = { version = "0.8.5", features = ["serde"] }
redis = { version = "0.27.6", features = ["tokio-rustls-comp", "cluster", "json", "r2d2"] }
regex = "1.11.1"
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.215", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
syntect = "5.2.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = "1.1.3"
